welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: ')' expected but 'if' found.
  if(negative == true  && ((a<0 && b<0){return true}
  ^posNeg:4: error: ')' expected but 'else' found.
  else{return false}
  ^